# bgn_agent

./: .gitignore  README.md  flake.nix
pac1-py/: .env.example  ARCHITECTURE.md  CLAUDE.md  CONTEXT_OPTIMIZATION.md  Makefile  PAC1_ANTIGRAVITY_WORKFLOW.md  PAC1_EVALUATION_LOG.md  PAC1_EXTRACTION_GUIDE.md  README.md  REFACTORING.MD  ROADMAP_PAC1_PY.md  agent.py  antigravity_reply.py  antigravity_responder.py  benchmark_system_questions_answers.md  debug_parser.py  debug_tree.py  diag.py  get_task_info.py  llm_logger.py  llm_provider.py  main.py  orchestrator.py  pac1_pipeline.md  pyproject.toml  tasks_context_overview.json  tasks_context_overview.md  СОКРАЩЕНИЕ КОНТЕКСТА.txt
pac1-py/agents/: __init__.py  add_logging.py  add_summary_log.py  ambiguity.py  bootstrap_node.py  context_extractor.py  context_gatherer.py  execution_agent.py  fix_summary.py  pcm_helpers.py  pre_completion_review_node.py  security.py  security_gate.py  security_node.py  state.py  strategic_analysis_node.py  subagent_node.py  task_node.py  tool_executor.py  triage_and_task_node.py  triage_node.py  trust_policy.py  types.py  update_extractor.py  validator_node.py  workflow_validators.py
pac1-py/prompts/: executor.txt  extractor.txt  security_gate.txt
sandbox-py/: .env.example  AGENTS.MD  META_AGENT_PROMPT.md  README.md  agent.py  llm_logger.py  llm_provider.py  main.py  orchestrator.py  pyproject.toml  run_per_agent_evolution.py  test_evolution.py
sandbox-py/agents/: __init__.py  add_logging.py  context_extractor.py  context_extractor.py.bak  context_extractor.py.tmp  execution_agent.py  fix_limits.py  fix_strings.py  per_agent_analyzer.py  per_agent_versioner.py  prompt_storage.py  security_gate.py  types.py  update_main.py  validation_agent.py  write_context_extractor.py
sandbox-py/agents/prompts/context_extractor/: meta.json  v0.txt  v1.txt  v2.txt  v3.txt  v4.txt  v5.txt  v6.txt  v7.txt  v8.txt
sandbox-py/agents/prompts/execution_agent/: meta.json  v0.txt  v1.txt  v10.txt  v11.txt  v12.txt  v13.txt  v14.txt  v15.txt  v16.txt  v17.txt  v18.txt  v2.txt  v3.txt  v4.txt  v5.txt  v6.txt  v7.txt  v8.txt  v9.txt
sandbox-py/agents/prompts/security_gate/: meta.json  v0.txt  v1.txt  v2.txt  v3.txt
sandbox-py/agents/prompts/validation_agent/: meta.json  v0.txt  v1.txt  (+9 more)
sandbox-py/self_evolution/: __init__.py  analyzer.py  evolution_log.py  evolution_loop.py  executor.py  executor_pcm.py  metrics.py  prompt_store.py  task_logger.py  validation.py  versioner.py
sandbox-py/self_evolution/prompts/: index.json  v0.txt
task-extractor/: .gitignore  README.md  main.py  pyproject.toml
(+3 files in other folders)
