[project]
name = "bitgn-task-extractor"
version = "0.1.0"
description = "Extract BitGN benchmark tasks with full workspace data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bitgn-api-connectrpc-python==0.9.0.1.20260324104753+6b18c777b19a",
    "bitgn-api-protocolbuffers-python==34.1.0.1.20260324104753+6b18c777b19a",
    "protobuf>=7.34.1",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv]
package = false